@@ -1,6 +1,7 @@
 ** Version 1.3 - Not released yet **
 
-  * add M.ToggleSwitchView 
+  * add M.ToggleSwitchView
+  * add isPersistent to Toolbar 
 
 ** Version 1.2 - Date 02.07.2012 **
 
